tests/ui/errors/auto-impl.pattern.box.stderr
error: `auto_impl` supports only ident of wildcard arguments
 --> tests/ui/errors/auto-impl.pattern.box.rs:3:13
  |
3 |     fn test(box a: Box<i32>) {
  |             ^^^
